--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "frank-memory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pdottore.github.io/memory-game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
